--- a/ReactParkDemo/Views/Shared/_Layout.cshtml
+++ b/ReactParkDemo/Views/Shared/_Layout.cshtml
@@ -8,25 +8,15 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-        </div>
-    </div>
+   
     <div class="container body-content">
         @RenderBody()
         <hr />
     </div>
 
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+        @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/Scripts/dist/reactbundle.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
